classes themselves.

Also rearranged some header stuff and created a few new helper macros
for object declarations.
----------------------------------------------------------------------
Wed May 22 00:16:31 2002                        Michael Jennings (mej)

Brought the performance tests up to date and cleaned up some memory
leaks in them.
----------------------------------------------------------------------
Wed May 22 08:59:38 2002                        Michael Jennings (mej)

Stupid typo.  Doing too much perl, I guess.  cpp uses "#elif," not
"#elsif."
----------------------------------------------------------------------
Sun May 26 22:37:43 2002                        Michael Jennings (mej)

Updated performance testing to be scaled.  The default is a quicker
performance test than before, but now we can also choose to run
anywhere from scratching the surface to a very thorough pounding.
----------------------------------------------------------------------
Sun Jun  9 14:16:38 2002                        Michael Jennings (mej)

Return on failed assert.
----------------------------------------------------------------------
Sat Jul 13 23:26:12 2002                        Michael Jennings (mej)

New function, version_compare(), which accurately compares package
version numbers.  Take a look at the various test cases to see what
kinds of comparisons it can accurately make, and if you see any that
aren't there, let me know.
----------------------------------------------------------------------
Fri Jul 26 00:12:25 2002                        Michael Jennings (mej)

Mmmm, sockets that connect. :)
----------------------------------------------------------------------
Fri Jul 26 16:52:40 2002                        Michael Jennings (mej)

More socket work.  Also, permit muting of error/warning messages by
supplying a NULL value for the program name.
----------------------------------------------------------------------